--- a/She/index.html
+++ b/She/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dear Sun</title>
-    <meta name="language" content="en-US">
-    <meta name="title" content="Dear Sun">
-    <meta name="description" content="Collecting this wasn't easy — your star is my motivation to keep going! Contributions are welcome too.">
-    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210715233345.png">
+    <title>Rafaela <3</title>
+    <meta name="language" content="PT-BR">
+    <meta name="title" content="Rafaela <3">
+    <meta name="description" content="">
+    <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="css/love.css">
 </head>
 
