--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
+    <title>Dear Sun</title>
     <title>Meu amor</title>
     <meta name="language" content="en-US">
-    <meta name="title" content="Meu amor">
-    <meta name="description" content="">
-    <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="css/love.css">
 </head>
 
